# ZetaSolNFT

./: Anchor (2).toml  Anchor.toml  Cargo (2).toml  README.md
crates/common/src/: lib.rs
programs/universal-nft/: Cargo.toml  cargo1.toml
programs/universal-nft/src/: gateway.rs  lib.rs  liba.rs  state.rs  tss.rs
scripts/: localnet.sh
tests/: universal-nft.ts
